--- a/tests/plugins_integration/regexp.yaml
+++ b/tests/plugins_integration/regexp.yaml
@@ -7,9 +7,9 @@
     15 min load per core: [0-9]+(\.[0-9]+)? \([0-9]+ cores\)$
 '.*\.Systemd_Timesyncd_Time':
   plugin_output: >-2
-    Offset: [0-9]+ (micro|milli)?seconds?,
-    Time since last sync: [0-9]+ minutes? [0-9]+ seconds?,
-    Time since last NTPMessage: [0-9]+ minutes? [0-9]+ seconds?,
+    Offset: -?[0-9]+ (micro|milli)?seconds?,
+    Time since last sync: ([0-9]+ (year|month|day|hour|minute|second)s? )+,
+    Time since last NTPMessage: ([0-9]+ (year|month|day|hour|minute|second)s? )+,
     Stratum: [0-9]+(\.[0-9]+)?,
     Jitter: [0-9]+ (micro|milli)?seconds?,
     Synchronized on [0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}
@@ -21,21 +21,21 @@
     execution time [0-9]+\.[0-9]+ sec
 '.*\.Kernel_Performance':
   plugin_output: >-2
-    Process Creations: [0-9]+(\.[0-9]+)?/s,
+    ^Process Creations: [0-9]+(\.[0-9]+)?/s,
     Context Switches: [0-9]+(\.[0-9]+)?/s,
     Major Page Faults: [0-9]+(\.[0-9]+)?/s,
     Page Swap in: [0-9]+(\.[0-9]+)?/s,
-    Page Swap Out: [0-9]+(\.[0-9]+)?/s
+    Page Swap Out: [0-9]+(\.[0-9]+)?/s$
 '.*\.Site_SITE_statistics':
   plugin_output: >-2
     Total hosts: [0-9]+,
     Problem hosts: [0-9]+,
     Total services: [0-9]+,
     Problem services: [0-9]+
-'.*Uptime':
+'.*[_.]Uptime':
   plugin_output: >-2
     Up since ([A-Z][a-z]+ [0-9]{2} [0-9]{4}|[0-9]{4}-[0-9]{2}-[0-9]{2}) [0-9]{2}:[0-9]{2}:[0-9]{2},
-    [Uu]ptime: ([0-9]+ days?,? )?([0-9]+ hours?( [0-9]+ minutes?)?|[0-9]{1,2}:[0-9]{2}:[0-9]{2})
+    [Uu]ptime: ([0-9]+ (year|month|day|hour|minute|second)s? )+([0-9]{1,2}:[0-9]{2}:[0-9]{2})?
 '.*\.Disk_IO_SUMMARY':
   plugin_output: >-2
     Read: [0-9]+(\.[0-9]+)? [kmgtpezyKMGTPEZY]?B/s,
@@ -54,3 +54,22 @@
     Livestatus version: [0-9]{4}\.[0-9]{2}\.[0-9]{2},
     Host checks: [0-9]+(\.[0-9]+)?/s,
     Service checks: [0-9]+(\.[0-9]+)?/s
+'.*\.PING':
+  plugin_output: >-2
+    OK - [0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}: rta [0-9]+(.[0-9]+)?ms, lost [0-9]+%
+'.*\.Log_#var#adm#messages':
+  plugin_output: >-2
+    [0-9]+ CRIT messages? \(Last worst: "[A-Z][a-z]+ [0-9]+ [0-9]{2}:[0-9]{2}:[0-9]{2}
+    [A-Za-z0-9]+ amf_mk_agent\[[0-9]+\]: \[ID [0-9]+ daemon.info\]
+    connect from [0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}"\)
+'.*\.NTP_Time':
+  plugin_output: >-2
+    Offset: -?[0-9]+(\.[0-9]+) m?s,
+    Stratum: [0-9]+(\.[0-9]+)?,
+    Time since last sync: ([0-9]+ (year|month|day|hour|minute|second)s? )+.*
+'.*\.Heartbeat_CRM_General':
+  plugin_output: >-2
+    ([0-9]+ years? ?)?([0-9]+ days? ?)?
+'.*\.System_Time':
+  plugin_output: >-2
+    ^Offset: (-?[0-9]+ (year|month|day|hour|minute|second)s? )+\(warn/crit below -30 seconds/-1 minute 0 seconds\)
