Move test_Table to Livestatus package.
Change-Id: Id498e5a936ce45010b3fad4bbb172871d4d8eca1

--- a/packages/livestatus/test/CMakeLists.txt
+++ b/packages/livestatus/test/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(
   test_Queue.cc
   test_StringColumn.cc
   test_StringUtil.cc
+  test_Table.cc
   test_TimeColumn.cc
   test_TrialManager.cc)
 
