Refactoring: Moved TableDummy to Livestatus library.
Change-Id: I635bfb5d592c68b297a653d243c0c5a5cc09aa0a

--- a/packages/livestatus/src/CMakeLists.txt
+++ b/packages/livestatus/src/CMakeLists.txt
@@ -85,6 +85,7 @@ set(livestatus_headers
     ${header_location}/TableContacts.h
     ${header_location}/TableCrashReports.h
     ${header_location}/TableDowntimes.h
+    ${header_location}/TableDummy.h
     ${header_location}/TableEventConsole.h
     ${header_location}/TableEventConsoleEvents.h
     ${header_location}/TableEventConsoleHistory.h
