Refactoring: Inlined trivial pnp4nagios files.
Change-Id: I01bfdd0b6d36c6106ef816b6aab408e0c4d1b312

--- a/livestatus/src/Makefile.am
+++ b/livestatus/src/Makefile.am
@@ -85,8 +85,7 @@ liblivestatusneb_a_SOURCES = \
         NebService.cc \
         Store.cc \
         TimeperiodsCache.cc \
-        module.cc \
-        pnp4nagios.cc
+        module.cc
 $(liblivestatusneb_a_SOURCES): $(ASIO_INCLUDE)
 
 # Called during packaging. Copied from Makefile.am "all-am" to exclude noinst* targets
