--- a/Pipfile
+++ b/Pipfile
@@ -6,33 +6,33 @@ verify_ssl = true
 name = "pypi"
 
 [dev-packages]
-astroid = "*"  # used by testlib.pylint_checker_localization
+astroid = "==2.15.4"  # used by testlib.pylint_checker_localization
 bandit = "*"  # used by test/Makefile's test-bandit target
 "beautifulsoup4" = "*"  # used by the GUI crawler and various tests
 bson = "*"  # used by test_mk_mongodb unit test
 compiledb = "*"  # used by the Livestatus/CMC Makefiles for building compile_command.json
 devpi-client = "*" # Managing the devpi server
-docker = "*"  # used by test_docker test and mk_docker agent plugin
+docker = "==6.0.1"  # used by test_docker test and mk_docker agent plugin
 dockerpty = "*"  # used by dockerized tests for opening debug shells
 freezegun = "*"  # used by various unit tests
 isort = "*"  # used as a plugin for editors
 mock = "*"  # used in checktestlib in unit tests
 pylint = "*"  # used by test/Makefile's test-pylint target
-hypothesis = "*"    # used by unit tests
-mypy = "*"  # used by test/static/Makefile's test-mypy target
+hypothesis = "==6.72.4"    # used by unit tests
+mypy = "==1.2.0"  # used by test/static/Makefile's test-mypy target
 twine = "*" # used to upload packages to internal PyPi mirror
 playwright = "*"  # used for in-browser testing
 pydantic-factories = "*"  # used for pydantic model testing;
 pymongo = "*"  # used by mk_mongodb agent plugin
 pytest = "*"  # used by various test/Makefile targets
-pytest-cov = "*"  # used (indirectly) by test/Makefile's test-unit-coverage-html target, see comment there
+pytest-cov = "==4.0.0"  # used (indirectly) by test/Makefile's test-unit-coverage-html target, see comment there
 pytest-mock = "*"  # used by quite a few unit/integration tests via the mocker fixture
 preprocess = "*" # implicit dependency of pytest-testmon, might be removed when testmon is updated
-pytest-testmon = "*"  # used for pre-commit checking via .pre-commit-config.yaml
+pytest-testmon = "==2.0.6"  # used for pre-commit checking via .pre-commit-config.yaml
 pytest-profiling = "*"  # used to analyze test run performance
 pytest-random-order = "*"  # used to test resiliency
 pytest-repeat = "*"  # used to test resiliency
-pytest-xdist = "*" # used to limit number of procs in e2e tests
+pytest-xdist = "==3.2.1" # used to limit number of procs in e2e tests
 responses = "*"  # used for unit tests
 webtest = "*"  # used by WSGI based tests
 pre-commit = "*"  # used to fix / find issues before committing changes
@@ -54,7 +54,7 @@ pipfile = "*" # for generating import names during int tests
 networkx = "*" # needed for py-import-cycles
 py-import-cycles = "*"  # used in tests/Makefile
 telnetlib3 = "*"  # used by Windows Agent tests
-schemathesis = "*"  # used for openapi tests
+schemathesis = "==3.19.0"  # used for openapi tests
 httpx = "*"  # used by agent receiver tests
 ruff = "*"
 types-beautifulsoup4 = "*"  # used for type checking
