--- a/Pipfile
+++ b/Pipfile
@@ -38,7 +38,7 @@ webtest = "*"  # used by WSGI based tests
 pre-commit = "*"  # used to fix / find issues before committing changes
 flake8 = "*"
 autoflake = "*"  # used to remove unused import statements
-sphinx = "==5.3.0"  # used for the plugin API documentation, pinned for now, because 6.0.0 doesn't work well with other tools ("AttributeError: module 'docutils.nodes' has no attribute 'meta')
+sphinx = "*"  # used for the plugin API documentation, pinned for now, because 6.0.0 doesn't work well with other tools ("AttributeError: module 'docutils.nodes' has no attribute 'meta')
 sphinx-autodoc-typehints = "*"  # used for the plugin API documentation
 sphinx-rtd-theme = "*"  # used for the plugin API documentation
 sphinxcontrib-plantuml = "*"  # used for the API and architecture
@@ -117,7 +117,7 @@ ply = "==3.11"  # needed by pysmi, python-active-directory
 pysmi = "==0.3.4"  # needed by pysnmp
 pysnmp = "==4.4.12"  # needed by Event Console
 snmpsim = "==0.4.7"  # needed by SNMP integration tests
-certifi = "==2022.12.7"  # needed by requests
+certifi = "*"  # needed by requests
 chardet = "==5.1.0"  # needed by requests
 urllib3 = "==1.26.15"  # needed by requests
 pyopenssl = "==19.1.0"  # needed by requests with extras = ["security"]
@@ -146,7 +146,7 @@ defusedxml = "==0.7.1"  # needed by jira
 oauthlib = "==3.2.2"  # needed by requests-oauthlib and jira
 requests-oauthlib = "==1.3.1"  # needed by jira
 requests-toolbelt = "==0.10.1"  # needed by jira
-docutils = "==0.19"  # needed by boto3 (aws)
+docutils = "*"  # needed by boto3 (aws)
 jira = "==3.5.0"  # needed by jira
 adal = "==1.2.7"  # needed by agent_azure
 pillow = "==9.5.0"
