Add saas edition definition
Change-Id: If0951fc61e33b0b59cd3ca516fcd78b32e3a5769

--- a/editions.yml
+++ b/editions.yml
@@ -38,3 +38,7 @@ editions:
         release: [*common]
         daily: *daily_reduced
         testbuild: []
+    saas:
+        release: ["ubuntu-22.04"]
+        daily: ["ubuntu-22.04"]
+        testbuild: []
