Moved Store to Livestatus library.
Change-Id: I6d64374574bc7ba4f91d14ddd086ec18ec9ec844

--- a/packages/livestatus/src/CMakeLists.txt
+++ b/packages/livestatus/src/CMakeLists.txt
@@ -73,6 +73,7 @@ set(livestatus_headers
     ${header_location}/ServiceListRenderer.h
     ${header_location}/ServiceListState.h
     ${header_location}/StatsColumn.h
+    ${header_location}/Store.h
     ${header_location}/StringColumn.h
     ${header_location}/StringFilter.h
     ${header_location}/StringUtils.h
@@ -161,6 +162,7 @@ set(livestatus_sources
     ServiceListRenderer.cc
     ServiceListState.cc
     StatsColumn.cc
+    Store.cc
     StringFilter.cc
     StringUtils.cc
     strutil.cc
