--- a/tests/plugins_integration/regexp.yaml
+++ b/tests/plugins_integration/regexp.yaml
@@ -1,3 +1,7 @@
+'.*':
+  plugin_output: >-2
+    Crash-ID: [A-Za-z0-9]{8}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{12}
+  # NOTE: Ignoring crash-IDs does *not* mean we are ignoring (unexpected) crashes!
 '.*\.CPU_utilization':
   plugin_output: >-2
     ^Total CPU: [0-9]+(\.[0-9]+)?%$
@@ -19,6 +23,9 @@
 '.*\.Check_MK':
   plugin_output: >-2
     execution time [0-9]+\.[0-9]+ sec
+'.*\.Check_MK_Agent':
+  plugin_output: >-2
+    Time since last update check: ([0-9]+ (year|month|day|hour|minute|second)s? )+\(
 '.*\.Kernel_Performance':
   plugin_output: >-2
     ^Process Creations: [0-9]+(\.[0-9]+)?/s,
@@ -35,7 +42,7 @@
 '.*[_.]Uptime':
   plugin_output: >-2
     Up since ([A-Z][a-z]+ [0-9]{2} [0-9]{4}|[0-9]{4}-[0-9]{2}-[0-9]{2}) [0-9]{2}:[0-9]{2}:[0-9]{2},
-    [Uu]ptime: ([0-9]+ (year|month|day|hour|minute|second)s? )+([0-9]{1,2}:[0-9]{2}:[0-9]{2})?
+    [Uu]ptime: ([0-9]+ (year|month|day|hour|minute|second)s?,? )*([0-9]{1,2}:[0-9]{2}:[0-9]{2})?
 '.*\.Disk_IO_SUMMARY':
   plugin_output: >-2
     Read: [0-9]+(\.[0-9]+)? [kmgtpezyKMGTPEZY]?B/s,
