Check plugin test refactoring
Change-Id: I6267f329d7cc83e4e77099447bfeeae6ae6d8956

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -43,6 +43,7 @@ RANDOM_TZ = $(shell printf "UTC%+d\n" $$(( $$RANDOM / 1261 - 11 )) )
 
 SYSTEM_TESTS := \
     test-integration \
+    test-plugins-integration \
     test-composition \
     test-update \
     test-gui-crawl \
@@ -258,6 +259,9 @@ test-gui-e2e: prepare-playwright
 
 test-integration:
 	$(PYTEST) -T integration $(PYTEST_SYSTEM_TEST_ARGS) $(realpath integration)
+
+test-plugins-integration:
+	$(PYTEST) -T plugins_integration $(PYTEST_SYSTEM_TEST_ARGS) $(realpath plugins_integration)
 
 test-composition:
 	$(PYTEST) -T composition $(PYTEST_SYSTEM_TEST_ARGS) $(realpath composition)
