--- a/tests/plugins_integration/regexp.yaml
+++ b/tests/plugins_integration/regexp.yaml
@@ -1,7 +1,6 @@
 '.*':
   plugin_output: >-2
     Crash-ID: [A-Za-z0-9]{8}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{12}
-  # NOTE: Ignoring crash-IDs does *not* mean we are ignoring (unexpected) crashes!
 '.*\.CPU_utilization':
   plugin_output: >-2
     ^Total CPU: [0-9]+(\.[0-9]+)?%$
@@ -12,8 +11,8 @@
 '.*\.Systemd_Timesyncd_Time':
   plugin_output: >-2
     Offset: -?[0-9]+ (micro|milli)?seconds?,
-    Time since last sync: ([0-9]+ (year|month|day|hour|minute|second)s? )+,
-    Time since last NTPMessage: ([0-9]+ (year|month|day|hour|minute|second)s? )+,
+    Time since last sync: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+,
+    Time since last NTPMessage: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+,
     Stratum: [0-9]+(\.[0-9]+)?,
     Jitter: [0-9]+ (micro|milli)?seconds?,
     Synchronized on [0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}
@@ -25,7 +24,12 @@
     execution time [0-9]+\.[0-9]+ sec
 '.*\.Check_MK_Agent':
   plugin_output: >-2
-    Time since last update check: ([0-9]+ (year|month|day|hour|minute|second)s? )+\(
+    Time since last update check: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+\(
+'.*\.Check_MK_Discovery':
+  plugin_output: >-2
+    (All services up to date|Services: all up to date),
+    (All host labels up to date|Host labels: all up to date)(,
+    Parsing of section oracle_[^ ]+ failed[^,]*)*
 '.*\.Kernel_Performance':
   plugin_output: >-2
     ^Process Creations: [0-9]+(\.[0-9]+)?/s,
@@ -42,7 +46,7 @@
 '.*[_.]Uptime':
   plugin_output: >-2
     Up since ([A-Z][a-z]+ [0-9]{2} [0-9]{4}|[0-9]{4}-[0-9]{2}-[0-9]{2}) [0-9]{2}:[0-9]{2}:[0-9]{2},
-    [Uu]ptime: ([0-9]+ (year|month|day|hour|minute|second)s?,? )*([0-9]{1,2}:[0-9]{2}:[0-9]{2})?
+    [Uu]ptime: ([0-9]+ (year|month|day|hour|minute|second)s?,? ?)*([0-9]{1,2}:[0-9]{2}:[0-9]{2})?
 '.*\.Disk_IO_SUMMARY':
   plugin_output: >-2
     Read: [0-9]+(\.[0-9]+)? [kmgtpezyKMGTPEZY]?B/s,
@@ -73,10 +77,19 @@
   plugin_output: >-2
     Offset: -?[0-9]+(\.[0-9]+) m?s,
     Stratum: [0-9]+(\.[0-9]+)?,
-    Time since last sync: ([0-9]+ (year|month|day|hour|minute|second)s? )+.*
+    Time since last sync: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+.*
 '.*\.Heartbeat_CRM_General':
   plugin_output: >-2
-    ([0-9]+ years? ?)?([0-9]+ days? ?)?
+    ([0-9]+ (year|month|day|hour|minute|second)s? ?)+
 '.*\.System_Time':
   plugin_output: >-2
-    ^Offset: (-?[0-9]+ (year|month|day|hour|minute|second)s? )+\(warn/crit below -30 seconds/-1 minute 0 seconds\)
+    ^Offset: (-?[0-9]+ (year|month|day|hour|minute|second)s? ?)+\(warn/crit below -30 seconds/-1 minute 0 seconds\)
+'.*\.SAP_Process_.*':
+  plugin_output: >-2
+    Status: Running, Start Time: [A-Z][a-z]{2} [A-Z][a-z]{2} [0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2} [0-9]{4},
+    Elapsed Time: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+
+'.*\.VEEAM_Client_.*':
+  plugin_output: >-2
+    Status: Success, Size \(total\): 7.21 TiB,
+    Last backup: ([0-9]+ (year|month|day|hour|minute|second)s? ?)+ ago\(!!\) \(Warn/Crit: 1 day 6 hours/2 days 0 hours\),
+    Duration: 35 minutes 48 seconds, Average Speed: 409 MB/s
