add sort import rule for eslint
It was also necessary to install the simple-import-sort package
in order to enable automatic fix of this issue if needed.

Change-Id: Ib238b89df932b7a615e8846ec7d0a0767e1a6682

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,10 @@
         "ecmaVersion": 6,
         "sourceType": "module"
     },
-    "plugins": ["compat", "prettier"],
+    "plugins": ["compat", "prettier", "simple-import-sort"],
     "rules": {
+        "simple-import-sort/exports": "error",
+        "simple-import-sort/imports": "error",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/ban-ts-comment": "off",
