include new added ts files in strict compliation
Instead of including all ts files that have types to the list of
strict typed files, all non typed files were excluded. This forces
new added files to be typed instead of having to type it afterwards.

Change-Id: Ie74d1f7b2fb85bc3deafad8001303e4fadda4755

--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -14,63 +14,22 @@
         "noImplicitAny": true,
         "noUnusedParameters": true
     },
-    "files": [
-        // add files here
-        "./web/htdocs/js/modules/dashboard.ts",
-        "./web/htdocs/js/modules/valuespecs.ts",
-        "./web/htdocs/js/modules/graphs.ts",
-        "./web/htdocs/js/modules/wato.ts",
-        "./web/htdocs/js/modules/element_dragging.ts",
-        "./web/htdocs/js/modules/password_meter.ts",
-        "./web/htdocs/js/modules/forms.ts",
-        "./web/htdocs/js/modules/service_discovery.ts",
-        "./web/htdocs/js/modules/utils.ts",
-        "./web/htdocs/js/modules/selection.ts",
-        "./web/htdocs/js/modules/number_format.ts",
-        "./web/htdocs/js/modules/ajax.ts",
-        "./web/htdocs/js/modules/sites.ts",
-        "./web/htdocs/js/modules/foldable_container.ts",
-        "./web/htdocs/js/modules/transfer.ts",
-        "./web/htdocs/js/modules/visibility_detection.ts",
-        "./web/htdocs/js/modules/sidebar.ts",
-        "./web/htdocs/js/modules/async_progress.ts",
-        "./web/htdocs/js/modules/page_menu.ts",
-        "./web/htdocs/js/modules/popup_menu.ts",
-        "./web/htdocs/js/modules/availability.ts",
-        "./web/htdocs/js/modules/backup.ts",
-        "./web/htdocs/js/modules/activation.ts",
-        "./web/htdocs/js/modules/graph_integration.ts",
-        "./web/htdocs/js/modules/views.ts",
-        "./web/htdocs/js/modules/hover.ts",
-        "./web/htdocs/js/modules/help.ts",
-        "./web/htdocs/js/modules/background_job.ts",
-        "./web/htdocs/js/modules/profile_replication.ts",
-        "./web/htdocs/js/modules/sla.ts",
-        "./web/htdocs/js/modules/host_diagnose.ts",
-        "./web/htdocs/js/modules/reload_pause.ts",
-        "./web/htdocs/js/modules/prediction.ts",
-        "./web/htdocs/js/modules/bi.ts",
-        //"./web/htdocs/js/modules/figures/cmk_stats.ts",
-        "./web/htdocs/js/modules/figures/cmk_table.ts",
-        "./web/htdocs/js/modules/figures/cmk_figures.ts",
-        //"./web/htdocs/js/modules/figures/cmk_figures_plugins.ts",
-        "./web/htdocs/js/modules/quicksearch.ts",
-        "./web/htdocs/js/modules/webauthn.ts",
-        "./web/htdocs/js/modules/search.ts",
-        "./enterprise/web/htdocs/js/modules/figures/cmk_tabs.ts",
-        "./enterprise/web/htdocs/js/modules/figures/cmk_state.ts",
-        "./enterprise/web/htdocs/js/modules/figures/cmk_inventory.ts",
-        "./enterprise/web/htdocs/js/modules/figures/cmk_state_summary.ts",
-        "./enterprise/web/htdocs/js/modules/license_usage/license_usage_timeseries_graph.ts",
-        //"./enterprise/web/htdocs/js/modules/ntop/ntop_alerts.ts",
-        "./enterprise/web/htdocs/js/modules/ntop/ntop_flows.ts",
-        //"./enterprise/web/htdocs/js/modules/ntop/ntop_host_details.ts",
-        "./enterprise/web/htdocs/js/modules/ntop/ntop_top_talkers.ts",
-        "./enterprise/web/htdocs/js/modules/ntop/ntop_utils.ts"
-    ],
     "exclude": [
-        "./web/**/*",
-        "./enterprise/web/**/*",
+        "web/htdocs/js/index.ts",
+        "web/htdocs/js/mobile.ts",
+        "./web/htdocs/js/modules/figures/cmk_stats.ts",
+        "./web/htdocs/js/modules/figures/cmk_figures_plugins.ts",
+        "./enterprise/web/htdocs/js/modules/graphs_cee.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_figures_plugins_cee.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_barplot.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_site_overview.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_dc_table.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_alert_overview.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_gauge.ts",
+        "./enterprise/web/htdocs/js/modules/figures/cmk_timeseries.ts",
+        "./enterprise/web/htdocs/js/modules/ntop/ntop_host_details.ts",
+        "./enterprise/web/htdocs/js/modules/ntop/ntop_alerts.ts",
+        "web/htdocs/js/modules/nodevis/**/*",
         "node_modules"
     ]
 }
