fix mypy github actions
Change-Id: I1212fd40ad28fd44490e5905933773ff380fdf9e

--- a/mypy-raw.ini
+++ b/mypy-raw.ini
@@ -37,5 +37,5 @@ warn_return_any = true
 warn_unused_ignores = true
 
 # Disable non CRE module reference checking for Raw Edition repositories
-[mypy-cmk.base.automations.cee,cmk.base.cee.*,cmk.base.default_config.cee,cmk.base.default_config.cme,cmk.base.modes.cee,cmk.cee.*,cmk.gui.cee.*,cmk.gui.cme.*,cmk.gui.cce.*]
+[mypy-cmk.base.automations.cee,cmk.base.cee.*,cmk.base.default_config.cee,cmk.base.default_config.cme,cmk.base.modes.cee,cmk.cee.*,cmk.gui.cee.*,cmk.gui.cme.*,cmk.gui.cce.*,cmk.gui.cse.*]
 ignore_missing_imports = true
