--- a/buildscripts/infrastructure/build-nodes/sles-12sp5/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/sles-12sp5/Dockerfile
@@ -120,6 +120,7 @@ RUN /opt/install-protobuf-cpp.sh
 RUN /opt/install-openssl.sh
 RUN /opt/install-python.sh
 RUN /opt/install-freetds.sh
+RUN /opt/install-rust-cargo.sh
 
 # Now shrink all the binaries and libraries we produced to build a small image
 # in the next step
