--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-compat": "^4.0.0",
+    "eslint-plugin-license-header": "^0.6.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "extract-loader": "^5.1.0",
