CMK-13544: cmk-agent-ctl: Add missing feature
The feature "dangerous_configuration" is required for some rustls
structs that we use.
However, it's usage wasn't enforced up to know.
For some unknown reason, it pops up now when updating dependencies.

Change-Id: Ia95b2cc7f215ee7014462051c5bb8c23bb2b05cc

--- a/packages/cmk-agent-ctl/Cargo.toml
+++ b/packages/cmk-agent-ctl/Cargo.toml
@@ -23,7 +23,7 @@ serde_json = { version = "1.0" }
 serde_with = { version = "1.13" }
 uuid = { version = "1.0", features = ["v4"] }
 openssl = { version = "0.10", features = ["vendored"] }
-rustls = { version = "0.20" }
+rustls = { version = "0.20", features = ["dangerous_configuration"] }
 rustls-pemfile = { version = "1.0" }
 log = { version = "0.4" }
 flexi_logger = { version = "0.24", default-features = false }
