Install and link rust on all images
Change-Id: Ie7dff787a1f2dbf73e32e6bb49b12ea224295d35

--- a/buildscripts/infrastructure/build-nodes/sles-15sp3/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/sles-15sp3/Dockerfile
@@ -139,6 +139,7 @@ RUN /opt/install-protobuf-cpp.sh --link-only
 RUN /opt/install-python.sh link-only
 RUN /opt/install-freetds.sh link-only
 RUN /opt/install-bazel.sh link-only
+RUN /opt/install-rust-cargo.sh link-only
 
 # Install non cached dependencies
 RUN /opt/install-pipenv.sh
