Update cryptography package attempt 2
This reverts commit eddaeee8a4ce827fa11eb87872da02b70341b6dd.

Change-Id: I33300f1cea584f2f539a015ed16ef42eb80c2b58

--- a/omd/Makefile
+++ b/omd/Makefile
@@ -305,6 +305,7 @@ deb: debian/changelog debian/control
 	    --preserve-envvar="BAZEL_*" \
 	    --preserve-envvar="MAKE" \
 	    --preserve-envvar="PYTHON_ENABLE_OPTIMIZATIONS" \
+	    --preserve-envvar="RUSTUP_HOME" \
 	    --prepend-path $$HOME/.cargo/bin \
 	    --prepend-path=/usr/local/bin \
 	    --set-envvar EDITION=$(EDITION) \
