Update cryptography package attempt 2
This reverts commit fd51581f0719a796d7a41fb01296214c6160c470.

Change-Id: I33300f1cea584f2f539a015ed16ef42eb80c2b58

--- a/omd/Makefile
+++ b/omd/Makefile
@@ -295,6 +295,8 @@ debian/control: debian/control.in
 # b) drop the "clean" argument for newer distros
 # c) remove the dh_prep from debian/rules
 deb: debian/changelog debian/control
+	echo "echo in make"
+	rustup show
 	if [ "$(DISTRO_CODE)" = "jessie" ] || [ "$(DISTRO_CODE)" = "trusty" ] || [ "$(DISTRO_CODE)" = "xenial" ]; then \
 	    TARGET="-us -uc -B" ; \
 	else \
