--- a/tests/Makefile
+++ b/tests/Makefile
@@ -42,9 +42,7 @@ AGENT_PLUGIN_PYTHON_VERSIONS := $(shell make --no-print-directory --file=../defi
 AGENT_PLUGIN_UNIT_TEST_FILES := $(wildcard agent-plugin-unit/test_*.py)
 AGENT_PLUGIN_UNIT_TEST_FILES_PY2 := $(subst agent-plugin-unit,agent-plugin-unit/py2,$(AGENT_PLUGIN_UNIT_TEST_FILES))
 
-BROWSER_ENGINES = "chromium"
-
-.PHONY: clean sync-legacy-checks format-shell help prepare-protobuf-files prepare-playwright  bandit.ini \
+.PHONY: clean sync-legacy-checks format-shell help prepare-protobuf-files  bandit.ini \
 	$(foreach VERS,$(AGENT_PLUGIN_PYTHON_VERSIONS),test-agent-plugin-unit-py$(VERS)-docker) \
 	test-bandit test-code-quality test-code-quality-docker test-composition test-composition-docker \
 	test-composition-docker-debug test-docker test-docker-docker test-format-python test-format-python-docker \
@@ -177,12 +175,6 @@ test-bandit-nosec-markers:
 prepare-protobuf-files:
 	$(MAKE) -C .. protobuf-files
 
-prepare-playwright:
-	@for browser_engine in $(BROWSER_ENGINES); do \
-		../scripts/run-pipenv run playwright install-deps $$browser_engine; \
-		../scripts/run-pipenv run playwright install $$browser_engine; \
-	done
-
 test-integration-docker-debug test-composition-docker-debug:
 	$(PIPENV) run scripts/run-dockerized.py debug
 
@@ -248,13 +240,13 @@ test-format-css:
 test-format-css-docker:
 	../scripts/run-in-docker.sh make --quiet test-format-css
 
-test-gui-crawl: prepare-playwright
+test-gui-crawl:
 	$(PYTEST) -T gui_crawl --log-cli-level=INFO $(realpath gui_crawl/test_gui_crawl.py)
 
 test-gui-crawl-docker:
 	$(PIPENV) run scripts/run-dockerized.py "test-gui-crawl"
 
-test-xss-crawl: prepare-playwright
+test-xss-crawl:
 	XSS_CRAWL=1 $(PYTEST) -T gui_crawl --log-cli-level=INFO $(realpath gui_crawl/test_gui_crawl.py)
 
 test-xss-crawl-docker:
@@ -263,7 +255,7 @@ test-xss-crawl-docker:
 test-integration:
 	CI=true $(PIPENV) run scripts/run-integration-test.py $(realpath integration)
 
-test-gui-e2e: prepare-playwright
+test-gui-e2e:
 	$(PYTEST) -T gui_e2e --screenshot=only-on-failure --output="$$RESULT_PATH/" --log-cli-level=INFO $(realpath gui_e2e/)  --numprocesses=1
 
 test-gui-e2e-docker:
