Install browsers during docker image build
* this avoids installing chromium and its dependencies at every jenkins run
CMK-13488

Change-Id: I0d2061c319d836fd2bf2688e525430dad87b002a

--- a/buildscripts/infrastructure/build-nodes/ubuntu-20.04/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/ubuntu-20.04/Dockerfile
@@ -158,6 +158,7 @@ RUN /opt/install-patchelf.sh
 RUN /opt/install-packer.sh
 RUN /opt/install-aws-cli.sh
 RUN /opt/install-buildifier.sh
+RUN /opt/install-playwright-browsers.sh
 
 # Ensure all our build containers have the jenkins user (with same uid/gid). The non privileged
 # jobs will be executed as this user in the container
