load werks from all branches in git
currently not all branches are evaluated when creating all_werks.json

this script uses some git foo to extract them without checking out the
branches.

wget -O /tmp/all_werks.json https://download.checkmk.com/all_werks.json
jq --sort-keys . /tmp/all_werks.json > /tmp/web.json

python3 -m cmk.utils.werks collect cmk path/to/cmk > cmk.json
python3 -m cmk.utils.werks collect cma path/to/cma > cma.json
python3 -m cmk.utils.werks collect checkmk_kube_agent path/to/checkmk_kube_agent > kube.json
jq -s '.[0] * .[1] * .[2]' cma.json cmk.json kube.json > all_werks.json
jq --sort-keys . all_werks.json > /tmp/collect.json

git diff /tmp/web.json /tmp/collect.json

the dependency `GitPython` was already installed as it is a dependency
of bandit, but it has to be explicitly defined as dev dependency.

CMK-12815

Change-Id: I186a1f76af4c86de61e34f77862981c0d9fac185

--- a/Pipfile
+++ b/Pipfile
@@ -210,6 +210,7 @@ azure-storage-blob = "==12.15.0"  # used for backups to Azure Blob Storage
 azure-identity = "==1.12.0"  # used for backups to Azure Blob Storage
 markdown = "==3.4.3"  # used for werk parsing
 pyjwt = {version = "*", extras = ["crypto"]}  # used for SSO via OAUTH2
+GitPython = "==3.1.31"  # used for werk collecting
 
 [requires]
 # As pipenv {sync,lock} does currently not support env variable expansion in and out Pipfile.lock,
