fix branding in Windows agent: comments
Change-Id: I5464670572b8b383e570800862dfc0ea60837901

--- a/agents/wnx/install/resources/check_mk.yml
+++ b/agents/wnx/install/resources/check_mk.yml
@@ -4,7 +4,7 @@
 
 
 #
-# Default Check MK configuration file
+# Default Checkmk configuration file
 #
 
 # $CUSTOM_PLUGINS_PATH$  -> is ProgramData/checkmk/agent/plugins
