--- a/agents/wnx/install/resources/check_mk.user.yml
+++ b/agents/wnx/install/resources/check_mk.user.yml
@@ -3,7 +3,7 @@
 # conditions defined in the file COPYING, which is part of this source code package.
 
 #
-# User Check MK configuration file
+# User Checkmk configuration file
 #
 
 # The Agent will accept YML-File as a valid configuration file
