--- a/packages/cmk-agent-ctl/Cargo.toml
+++ b/packages/cmk-agent-ctl/Cargo.toml
@@ -29,7 +29,7 @@ rand = { version = "0.8" }
 # ideally, we would just use "rustls-tls-native-roots" instead of "native-tls" and "rustls-tls-manual-roots
 # however, in SUP-10832, native-tls was ok with the custom CA of the customer, while rustls complained
 # unfortunately, we couldn't find out why, so for now, we have to keep native-tls
-reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "native-tls", "rustls-tls-manual-roots"] }
+reqwest = { version = "=0.11.17", features = ["blocking", "json", "multipart", "native-tls", "rustls-tls-manual-roots"] }
 rpassword = { version = "6.0" }
 rustls = { version = "0.20", features = ["dangerous_configuration"] }
 rustls-pemfile = { version = "1.0" }
